# termquotes

./: .gitignore  LICENSE  README.md  init_db.py  pyproject.toml  termquotes.py
seeds/: programming.json
termquotes/: api.py  console.py  helpers.py  main.py
termquotes/data/: quotes.db
tests/: test_termquotes.py
