[tool.poetry]
name = "termquotes"
version = "0.2.0"
description = ""
authors = ["Titus Soporan <titus@tsoporan.com>"]

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.0"
colorama = "^0.4.1"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[tool.poetry.scripts]
termquotes = 'termquotes.console:cli'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
