[tool.poetry]
name = "termquotes"
version = "0.4.0"
description = "A little CLI tool to record, categorize and display quotes"
authors = ["Titus Soporan <titus@tsoporan.com>"]
license = 'MIT'
readme = 'README.md'
repository = "https://github.com/tsoporan/termquotes"
homepage = "https://github.com/tsoporan/termquotes"
keywords = ['terminal', 'cli', 'quotes']

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.0"
colorama = "^0.4.1"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[tool.poetry.scripts]
termquotes = 'termquotes.console:cli'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
